# decHGS

./: .gitignore  AusgabeDialogUI.py  AusgabeDialogUI.ui  Pipfile  frm_pdfdec.py  frm_pdfdec.ui  make_pdfdec.cmd  pdfdec.py  pdfdec.spec  pdfdec2.py  pdfdec3.py  pyproject.toml  readme.md  requirements.in  requirements.txt  stripPsw.kv  stripPsw.py
