[tool.poetry]
name = "dechgs"
version = "3.0"
description = "Öffnet eine verschlüsselteHGS-Rechnung und speichert sie unverschlüsselt ab"
authors = ["ruegi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
PyMuPDF = "^1.24.7"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
